# java_invoke_c

./: .gitignore  CMakeLists.txt  README.md
cpp/: MyClass.h  test_AddCpp.cpp  test_AddCpp.h  test_MyClassWrapper.cpp  test_MyClassWrapper.h  test_ReturnArray.cpp  test_ReturnArray.h
src/test/: AddCpp.java  MyClassWrapper.java  MyTest.java  ReturnArray.java
